# feature_store_ML

./: README.md  pyproject.toml  requirements.txt
feature_store/: features.csv
model_runs/: run_info.json
src/: data_exploration.py  data_generation.py  main.py  model_saving.py  model_training.py
src/model_runs/: predictions.csv  random_forest.joblib
